--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -88,7 +88,7 @@
                 Water Usage
             </a>
 
-            <a href="{{ url_for('billing') }}" class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700">
+            <!-- <a href="{{ url_for('billing') }}" class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700">
                 <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
@@ -103,16 +103,9 @@
                     </path>
                 </svg>
                 Loans
-            </a>
-
-            <!-- <a href="{{ url_for('admin_recharges') }}" class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700">
-                <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
-                    </path>
-                </svg>
-                Recharges
             </a> -->
+
+            
 
             <a href="{{ url_for('admin_send_notification') }}"
                 class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700">
@@ -193,6 +186,15 @@
                     </path>
                 </svg>
                 Make Payment
+            </a>
+
+            <a href="{{ url_for('borrow_water_ui') }}" class="flex items-center px-6 py-3 text-gray-300 hover:bg-gray-700">
+                <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
+                    </path>
+                </svg>
+                Borrow Water
             </a>
 
             <a href="{{ url_for('user_settings') }}"
